--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,10 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: #ddd;
   padding: 32px;
-  min-height: 627px;
+  min-height: 550px;
 }
 
-#question-header {
+#question-header, #done {
   text-align: center;
   font-size: 24px;
   margin-bottom: 15px;
@@ -36,7 +36,6 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
-
 
 /* based on bootstrap buttons */
 .btn {
@@ -183,6 +182,52 @@
   background-color: #1c1cb7;
 }
 
+#results-categories {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.results-category {
+  width: 33%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.results-category-name {
+  font-weight: bold;
+  text-align: center;
+}
+
+.results-category-pct {
+  font-size: 20px;
+}
+
+.results-img {
+  width: 100px;
+}
+
+#top-result {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+#top-result-img {
+  width: 200px;
+}
+
+#top-result-name {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+#top-result-pct {
+  font-size: 35px;
+}
+
 @media only screen and (max-width: 600px) {
   #kviz {
     padding: 32px 10px;
@@ -196,4 +241,13 @@
   .btn {
     font-size: 15px;
   }
+
+  .results-img {
+    width: 80px;
+  }
+
+  .results-category-name {
+    font-size: 13px;
+  }
+
 }
