--- a/css/style.css
+++ b/css/style.css
@@ -65,11 +65,11 @@
 }
 
 .btn-5-1 {
-  background-color: #1b5e20;
+  background-color: #a6611a;
 }
 
 .btn-5-2 {
-  background-color: #4caf50;
+  background-color: #dfc27d;
 }
 
 .btn-5-3 {
@@ -77,11 +77,11 @@
 }
 
 .btn-5-4 {
-  background-color: #f44336;
+  background-color: #80cdc1;
 }
 
 .btn-5-5 {
-  background-color: #b71c1c;
+  background-color: #018571;
 }
 
 .btn-11, .btn-12 {
@@ -91,95 +91,95 @@
 }
 
 .btn-11-1 {
-  background-color: #b71c1c;
+  background-color: #543005;
 }
 
 .btn-11-2 {
-  background-color: #a7221c;
+  background-color: #8c510a;
 }
 
 .btn-11-3 {
-  background-color: #97291c;
+  background-color: #bf812d;
 }
 
 .btn-11-4 {
-  background-color: #882f1d;
+  background-color: #dfc27d;
 }
 
 .btn-11-5 {
-  background-color: #78361d;
+  background-color: #f6e8c3;
 }
 
 .btn-11-6 {
-  background-color: #693d1e;
+  background-color: #dee9d4;
 }
 
 .btn-11-7 {
-  background-color: #59431e;
+  background-color: #c7eae5;
 }
 
 .btn-11-8 {
-  background-color: #494A1e;
+  background-color: #80cdc1;
 }
 
 .btn-11-9 {
-  background-color: #3a501f;
+  background-color: #35978f;
 }
 
 .btn-11-10 {
-  background-color: #2a571f;
+  background-color: #01665e;
 }
 
 .btn-11-11 {
-  background-color: #1b6e20;
+  background-color: #003c30;
 }
 
 .btn-12-1 {
-  background-color: #b71c1c;
+  background-color: #543005;
 }
 
 .btn-12-2 {
-  background-color: #a81c2a;
+  background-color: #8c510a;
 }
 
 .btn-12-3 {
-  background-color: #9a1c38;
+  background-color: #bf812d;
 }
 
 .btn-12-4 {
-  background-color: #8c1c46;
+  background-color: #dfc27d;
 }
 
 .btn-12-5 {
-  background-color: #7e1c54;
+  background-color: #f6e8c3;
 }
 
 .btn-12-6 {
-  background-color: #701C62;
+  background-color: #e6e8ce;
 }
 
 .btn-12-7 {
-  background-color: #621c70;
+  background-color: #def2c4;
 }
 
 .btn-12-8 {
-  background-color: #541c7e;
+  background-color: #c5eecb;
 }
 
 .btn-12-9 {
-  background-color: #461c8c;
+  background-color: #80cdc1;
 }
 
 .btn-12-10 {
-  background-color: #381c9a;
+  background-color: #35978f;
 }
 
 .btn-12-11 {
-  background-color: #2a1ca8;
+  background-color: #01665e;
 }
 
 .btn-12-12 {
-  background-color: #1c1cb7;
+  background-color: #003c30;
 }
 
 #results-categories {
