--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@ a.btn.disabled, fieldset:disabled a.btn {
 }
 
 .detail-box-radary > div {
-  width: 50%;
+  width: 210px;
 }
 
 @media only screen and (max-width: 600px) {
