--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
-#kviz {
+#eu-app {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#kviz {
   background-color: #ddd;
   padding: 32px;
   min-height: 550px;
@@ -275,14 +278,25 @@ a.btn.disabled, fieldset:disabled a.btn {
   flex-wrap: wrap;
 }
 
-.detail-box-radary {
+#radar-switch {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.detail-box-radary > div {
-  width: 210px;
+.graph-btn {
+  text-align: center;
+  border: 1px solid #dcdcdc;
+  line-height: 1.5;
+  border-radius: 10px;
+  font-size: 13px;
+  background-color: #fff; 
+  margin-right: 5px;
 }
+
+.graph-btn-selected {
+  background-color: #dcdcdc;
+}
+
 
 @media only screen and (max-width: 600px) {
   #kviz {
