--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-#eu-app {
+#eu-app, #eu-secondary-app {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -297,6 +297,9 @@ a.btn.disabled, fieldset:disabled a.btn {
   background-color: #dcdcdc;
 }
 
+.calc-slider {
+  width: 50%;
+}
 
 @media only screen and (max-width: 600px) {
   #kviz {
@@ -319,5 +322,4 @@ a.btn.disabled, fieldset:disabled a.btn {
   .results-category-name {
     font-size: 13px;
   }
-
 }
