--- a/css/style.css
+++ b/css/style.css
@@ -297,8 +297,20 @@ a.btn.disabled, fieldset:disabled a.btn {
   background-color: #dcdcdc;
 }
 
+#eu-secondary-app {
+  display: flex;
+}
+
 .calc-slider {
+  margin-bottom: 20px;
+}
+
+#calc-results {
+  display: flex;
   width: 50%;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 @media only screen and (max-width: 600px) {
