--- a/css/style.css
+++ b/css/style.css
@@ -306,11 +306,13 @@ a.btn.disabled, fieldset:disabled a.btn {
 }
 
 #calc-results {
-  display: flex;
   width: 50%;
-  flex-direction: column;
+  margin-left: 20px;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  text-align: center;
 }
 
 @media only screen and (max-width: 600px) {
