--- a/css/style.css
+++ b/css/style.css
@@ -376,6 +376,10 @@ a.btn.disabled, fieldset:disabled a.btn {
   text-align: center;
 }
 
+.calc-name-tooltiped {
+  text-decoration: underline dotted gray;
+}
+
 @media only screen and (max-width: 600px) {
   #kviz {
     padding: 32px 10px;
