--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,7 @@ a.btn.disabled, fieldset:disabled a.btn {
 #radar-switch {
   display: flex;
   justify-content: space-around;
+  margin-bottom: 15px;
 }
 
 #detail-box {
